policy-l7.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: webapi-allow-website
  labels:
    topology: appscluster
spec:
  selector:
    matchLabels:
      app: webapi
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/waypoint
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: webapi-allow-website-http
  labels:
    topology: appscluster
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: webapi
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/website
    to:
    - operation:
        methods: ["GET"]
        paths: ["/weatherforecast"]
